--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "arch": "^2.2.0",
     "axios": "^0.27.2",
     "open": "^8.0.7",
     "ts-debounce": "^2.0.1",
