--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
   },
   "devDependencies": {
     "@types/flashpoint-launcher": "^10.1.0",
-    "@types/node": "14.10.1",
+    "@types/node": "18.11.18",
     "@types/uuid": "^8.3.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "gulp-zip": "^5.1.0",
+    "gulp-zip": "^4.2.0",
     "merge-stream": "^2.0.0",
     "ts-loader": "8.0.3",
     "typescript": "4.0.2",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12"
+    "webpack": "^5.75.0",
+    "webpack-cli": "5.0.1"
   },
   "scripts": {
     "package": "gulp",
