--- a/package.json
+++ b/package.json
@@ -50,12 +50,15 @@
     "@types/flashpoint-launcher": "^10.1.0",
     "@types/node": "18.11.18",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-zip": "^4.2.0",
     "merge-stream": "^2.0.0",
     "ts-loader": "8.0.3",
-    "typescript": "4.0.2",
+    "typescript": "^4.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "5.0.1"
   },
