--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
-name: Nightly Builds
+name: Version-based Release
 
 on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 0 * * *'
   push:
     branches:
       - main
@@ -14,79 +11,57 @@ jobs:
 
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
-      date: ${{ steps.current_time_underscores.outputs.formattedTime }}
-      activity_check: ${{ env.GHA_REPO_ALIVE }}
+      version: ${{ steps.package_version.outputs.version }}
+      should_release: ${{ steps.check_release.outputs.should_release }}
 
     steps:
-    - name: Activity check
-      run: |
-        :
-        # Based off https://github.community/t/trigger-workflow-if-there-is-commit-in-last-24-hours/17074/3
-        curl -sL https://api.github.com/repos/$GITHUB_REPOSITORY/commits | jq -r '[.[]][0]' > $HOME/commit.json
-        date="$(jq -r '.commit.committer.date' $HOME/commit.json)"
-        timestamp=$(date --utc -d "$date" +%s)
-        author="$(jq -r '.commit.committer.name' $HOME/commit.json)"
-        url="$(jq -r '.html_url' $HOME/commit.json)"
-        days=$(( ( $(date --utc +%s) - $timestamp ) / 86400 ))
-        rm -f $HOME/commit.json
-        echo "Repository activity : $timestamp $author $url"
-        alive=0
-        if [ "${{ github.event_name }}" == "repository_dispatch" ]; then
-           echo "[WARNING] Ignoring activity limits : workflow triggered manually"
-           alive=1
-        else
-           if [ $days -lt 1 ]; then
-              echo Repository active : $days days
-              alive=1
-           else
-              echo "[WARNING] Repository not updated : event<${{ github.event_name }}> not allowed to modify stale repository"
-           fi
-        fi
-        if [ $alive -eq 1 ]; then
-           echo ::set-env name=GHA_REPO_ALIVE::true
-        fi
-      shell: bash
-      env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+    - uses: actions/checkout@v4
     
-    - name: Get current time
-      uses: 1466587594/get-current-time@v2
-      id: current_time_dashes
-      with:
-        format: YYYY-MM-DD
+    - name: Get package version
+      id: package_version
+      run: |
+        VERSION=$(node -p "require('./package.json').version")
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "tag=$VERSION" >> $GITHUB_OUTPUT
+        
+    - name: Check if release exists
+      id: check_release
+      run: |
+        if gh release view ${{ steps.package_version.outputs.version }} >/dev/null 2>&1; then
+          echo "Release ${{ steps.package_version.outputs.version }} already exists"
+          echo "should_release=false" >> $GITHUB_OUTPUT
+        else
+          echo "Release ${{ steps.package_version.outputs.version }} does not exist"
+          echo "should_release=true" >> $GITHUB_OUTPUT
+        fi
       env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-
-    - name: Get current time with underscores
-      uses: 1466587594/get-current-time@v2
-      id: current_time_underscores
-      with:
-        format: YYYY_MM_DD
-      env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Create release
-      if: env.GHA_REPO_ALIVE == 'true'
+      if: steps.check_release.outputs.should_release == 'true'
       id: create_release
       uses: actions/create-release@v1
       env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: nightly-${{ steps.current_time_dashes.outputs.formattedTime }}
-        release_name: Nightly ${{ steps.current_time_dashes.outputs.formattedTime }}
-        prerelease: true  
+        tag_name: ${{ steps.package_version.outputs.version }}
+        release_name: Release ${{ steps.package_version.outputs.version }}
+        prerelease: false
   
   upload-release:
     runs-on: ubuntu-latest
     needs: create-release
-    if: needs.create-release.outputs.activity_check == 'true'
+    if: needs.create-release.outputs.should_release == 'true'
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js 22
+      uses: actions/setup-node@v4
       with:
-        node-version: 14.x
+        node-version: '22'
+        cache: 'npm'
+        
     - run: npm install
     
     - name: Build and Package Release
@@ -99,7 +74,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create-release.outputs.upload_url }}
-        asset_path: ./extension.fplx
-        asset_name: analytics-ext_nightly_${{ needs.create-release.outputs.date }}.zip
+        asset_path: ./extension.zip
+        asset_name: extension.zip
         asset_content_type: application/zip
-          
