--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Create release
-      if: steps.check_release.outputs.should_release == 'true'
-      id: create_release
-      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.package_version.outputs.version }}
-        release_name: Release ${{ steps.package_version.outputs.version }}
-        prerelease: false
+      run: |
+        gh release create "${{ steps.package_version.outputs.version }}" \
+            --repo="$GITHUB_REPOSITORY" \
+            --title="${GITHUB_REPOSITORY#*/} ${{ steps.package_version.outputs.version }}" \
+            --generate-notes
   
   upload-release:
     runs-on: ubuntu-latest
