--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,18 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Create release
+      id: create_release
+      if: steps.check_release.outputs.should_release == 'true'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh release create "${{ steps.package_version.outputs.version }}" \
+        UPLOAD_URL=$(gh release create "${{ steps.package_version.outputs.version }}" \
             --repo="$GITHUB_REPOSITORY" \
             --title="${GITHUB_REPOSITORY#*/} ${{ steps.package_version.outputs.version }}" \
-            --generate-notes
+            --generate-notes \
+            --json upload_url \
+            --jq '.upload_url')
+        echo "upload_url=$UPLOAD_URL" >> $GITHUB_OUTPUT
   
   upload-release:
     runs-on: ubuntu-latest
